--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE_URL=http://localhost:8080/api
+REACT_APP_API_BASE_URL=http://43.201.105.80:8080/api
 REACT_APP_MAKEUP_API_BASE_URL=http://makeup-api.herokuapp.com/api
 
 # 반드시 키 이름은 REACT_APP_ 으로 시작해야 된다.
