--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_BASE_URL=http://43.203.39.193:8080/api
-REACT_APP_MAKEUP_API_BASE_URL=http://makeup-api.herokuapp.com/api
+REACT_APP_API_BASE_URL=https://nohssam.store:8080/api
+REACT_APP_MAKEUP_API_BASE_URL=https://makeup-api.herokuapp.com/api
 # 반드시 키 이름은 REACT_APP_ 으로 시작해야 된다.
 # 수정하면 반드시 재 시작해야 한다.
