--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=http://43.203.39.193:8080/api
+REACT_APP_API_BASE_URL=http://localhost:8080/api
 REACT_APP_MAKEUP_API_BASE_URL=http://makeup-api.herokuapp.com/api
