--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,45 +1,41 @@
+# 1. HTTP 요청을 HTTPS로 리디렉션
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen 80;
+    listen [::]:80;
+    server_name nohssam.store;
 
-    #access_log  /var/log/nginx/host.access.log  main;
+    return 301 https://$host$request_uri;
+}
+
+# 2. HTTPS 서버 설정
+server {
+    listen 443 ssl;
+    server_name nohssam.store;
+
+    ssl_certificate     /etc/letsencrypt/live/nohssam.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/nohssam.store/privkey.pem;
+
+    # React 앱 정적 파일 서빙
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri  /index.html;
+        try_files $uri /index.html;
     }
 
-    #error_page  404              /404.html;
+    # Spring Boot API 프록시
+    location /api/ {
+        proxy_pass http://localhost:8080/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
+    # 오류 페이지 설정
+    error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root /usr/share/nginx/html;
     }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
