--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,44 +1,19 @@
-# 1. HTTP 요청을 HTTPS로 리디렉션
 server {
-    listen 80;
-    listen [::]:80;
-    server_name nohssam.store;
-
-    return 301 https://$host$request_uri;
-}
-
-# 2. HTTPS 서버 설정
-server {
-    listen 443 ssl;
-    server_name nohssam.store;
-
-    ssl_certificate     /etc/letsencrypt/live/nohssam.store/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/nohssam.store/privkey.pem;
-
-    # React 앱 정적 파일 서빙
-    root /usr/share/nginx/html;
-    index index.html;
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost;
 
     location / {
-        try_files $uri /index.html;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri  /index.html;
     }
 
-    # Spring Boot API 프록시
-    location /api/ {
-        proxy_pass http://localhost:8080/;   # ⚠️ /api/ 빼야 함
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection keep-alive;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-    }
 
-    # 오류 페이지 설정
-    error_page 500 502 503 504 /50x.html;
+    error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html;
+        root   /usr/share/nginx/html;
     }
+
+
 }
