--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,6 +20,11 @@ jobs:
               with:
                 node-version: '20'
 
+              # 3. .env 파일 생성 (API 주소 포함)
+            - name: Create .env file
+              run: |
+                echo "REACT_APP_API_BASE_URL=http://nohssam.store:8080/api" > .env
+
             - name: DockerHub Login
               uses: docker/login-action@v2
               with:
