--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,46 +1,46 @@
-# server {
-#     listen       80;
-#     listen  [::]:80;
-#     server_name  localhost nohssam.store;
-
-#     location / {
-#         root   /usr/share/nginx/html;
-#         index  index.html index.htm;
-#         try_files $uri  /index.html;
-#     }
-
-#     error_page   500 502 503 504  /50x.html;
-#     location = /50x.html {
-#         root   /usr/share/nginx/html;
-#     }
-
-# }
-
 server {
-    listen 80;
-    listen [::]:80;
-    server_name localhost nohssam.store;
+    listen       80;
+    listen  [::]:80;
+    server_name  localhost nohssam.store;
 
-    # React 정적 파일
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri  /index.html;
     }
 
-    # Spring 백엔드 API 프록시
-    location /api/ {
-        proxy_pass http://spring-app2:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # 에러 페이지
-    error_page 500 502 503 504 /50x.html;
+    error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html;
+        root   /usr/share/nginx/html;
     }
+
 }
+
+# server {
+#     listen 80;
+#     listen [::]:80;
+#     server_name localhost nohssam.store;
+
+#     # React 정적 파일
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html index.htm;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # Spring 백엔드 API 프록시
+#     location /api/ {
+#         proxy_pass http://spring-app2:8080/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     # 에러 페이지
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
+# }
 
